# search

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---enhancement-request.md  ---everything-else.md  config.yml
.github/workflows/: main.yml
pelican/plugins/search/: __init__.py  search.py
tests/: test_search_settings_generator.py
