[tool.poetry]
name = "pelican-search"
version = "1.1.0"
description = "Pelican plugin that indexes content and enables static site searches"
authors = ["Justin Mayer <entroP@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "search", "index"]
repository = "https://github.com/pelican-plugins/search"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/search/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2", optional = true}
rtoml = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23"
chardet = "^5.1"
flake8 = "^6.0"
flake8-black = "^0.3"
flake8-pyproject = "^1.2"
invoke = "^2.0"
isort = "^5.12.0"
livereload = "^2.6"
markdown = "^3.2"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Search"
git-username = "botpub"
git-email = "botpub@autopub.rocks"

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 88

[tool.isort]
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
